# Multi-Agent-RAG-Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  build-and-push.ps1  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_chat.py  test_doc.md  test_search.py
.agent/guides/: bootstrap-guide.md  retrofit-guide.md
.agent/rules/: CODEBASE_CONTEXT.md  CODING_STANDARDS.md  CODING_STANDARDS_DOMAIN.md  CODING_STANDARDS_TESTING.md
.agent/workflows/: PIPELINE.md  add-task.md  audit-progress.md  bootstrap.md  bug-investigator.md  check-modularity.md  clarify.md  commit.md  deep-study.md  finalize-plan.md  fix-ci.md  generate-readme.md  generate-tests.md  hotfix.md  implement-next.md  prepare-prd.md  refactor-module.md  refine-prd.md  report-bug.md  resume.md  retrofit.md  security-audit.md  setup-ci.md  status.md  sync-context.md  validate-prd.md
docs/: multi-agent-rag-platform_prd.md  progress.md
scripts/: deploy.sh  seed_data.py
src/: config.py  main.py
src/agents/: executor.py  registry.py
src/api/: dependencies.py
src/cache/: semantic.py
src/db/: models.py  neo4j.py  postgres.py  redis.py
src/evaluation/: correctness.py  faithfulness.py  harness.py  relevance.py
src/guardrails/: content_safety.py  hallucination.py  injection.py  pii.py  pipeline.py
src/ingestion/: chunker.py  embedder.py  entity_extractor.py  pipeline.py
src/jobs/: __init__.py  cache_cleanup.py  conversation_summary.py  cost_budget_reset.py  evaluation_aggregation.py  graph_sync.py
src/lib/: logger.py  pagination.py  utils.py
src/llm/: cost_tracker.py  openrouter.py  router.py  streaming.py
src/mcp/: server.py
src/memory/: entity.py  long_term.py  manager.py  short_term.py
src/monitoring/: alerting.py  uptime.py
src/prompts/: registry.py
src/retrieval/: engine.py  graph_search.py  reranker.py  vector_search.py
tests/: conftest.py
tests/acceptance/: __init__.py  (+1 more)
(+95 files in other folders)
