[project]
name = "multi-agent-rag-platform"
version = "0.1.0"
description = "Multi-agent RAG platform with knowledge graph enrichment"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "neo4j>=5.0.0",
    "redis[hiredis]>=5.0.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",
    "structlog>=24.1.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit real local services (PostgreSQL, Neo4j, Redis)",
    "e2e: marks end-to-end journey tests against live server with real LLM calls",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
